--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "paybill",
+  "name": "platform",
   "description": "Platform Apis.",
   "version": "0.0.0",
   "author": "Emmanuel Bartile.",
-  "license": "Apache-2.0",
+  "license": "BSL-1.0",
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "build": "turbo run build",
     "build:platform-api": "turbo run build --filter=platform-api",
+    "build:aws-orchestrator-api": "turbo run build --filter=aws-orchestrator-api",
     "clean": "turbo run clean --parallel && rimraf -G node_modules/{*,.bin,.modules.yaml}",
     "dev": "turbo run dev --parallel",
     "dev:platform-api": "turbo run dev --filter=platform-api --parallel",
+    "dev:aws-orchestrator-api": "turbo run dev --filter=aws-orchestrator-api --parallel",
     "codegen": "turbo run codegen --filter=api-types --parallel",
     "lint": "turbo run lint",
     "typecheck": "turbo --continue typecheck",
     "test:prettier": "prettier --cache --check '{apps,packages}/**/*.{js,ts}'",
     "format": "prettier --cache --write '{apps,packages}/**/*.{js,ts}'",
     "test:platform-api": "turbo run test --filter=platform-api",
+    "test:aws-orchestrator-api": "turbo run test --filter=aws-orchestrator-api",
     "perf:kong": "ab -t 5 -c 20 -T application/json http://localhost:8000/",
     "platform:codegen": "cd packages/api-types && pnpm run codegen",
+    ":codegen": "cd packages/api-types && pnpm run codegen",
     "knip": "pnpx knip@~5.50.0",
     "prepare": "husky install"
   },
