--- a/packages/api-types/redocly.yaml
+++ b/packages/api-types/redocly.yaml
@@ -3,3 +3,7 @@ apis:
     root: http://localhost:3000/docs/json
     x-openapi-ts:
       output: ./types/platform.d.ts
+  aws-orchestrator-api:
+    root: http://localhost:4000/docs/json
+    x-openapi-ts:
+      output: ./types/aws-orchestrator.d.ts
